Bug 445667 - Cannot load video wall config
Summary: Cannot load video wall config
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-17 23:57 UTC by Nicolas Fella
Modified: 2021-11-22 07:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2021-11-17 23:57:15 UTC
STEPS TO REPRODUCE
1. Open scripts KCM
2. Enable video wall script
3. Click configure on the video wall script

OBSERVED RESULT
settings open

EXPECTED RESULT
A message saying that settings could not be found

SOFTWARE/OS VERSIONS
Everything from master

This seems to be a regression from https://invent.kde.org/plasma/kwin/-/commit/58c71de952c76fd479b1e1c0ae6228d8ef2051e3 since m_packageName in https://invent.kde.org/plasma/kwin/-/blob/master/src/scripting/genericscriptedconfig.cpp#L71 is now empty
Comment 1 Alexander Lohnau 2021-11-18 05:53:48 UTC
The issue is that in the KPluginSelector the arguments do not get correctly set. In fact, one can not et the args on a per-plugin base.

I will work on a fix, it should be possible by reading the metadata inside of the factory as a fallback.
Comment 2 Bug Janitor Service 2021-11-18 06:03:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1682
Comment 3 Alexander Lohnau 2021-11-22 07:49:21 UTC
Git commit 468acd0cbed9036f1951e8ab1610880253aa3f3e by Alexander Lohnau.
Committed on 22/11/2021 at 07:48.
Pushed by alex into branch 'master'.

Fix determining of scripted effect config from KPluginSelector

In the KPluginSelector we don't have the possibility to set the args for
each KCM. Because of that we use the metadata of the KPluginFactory as a
fallback to read the plugin keyword, which specifies the KCM we want to display.

This requires kcmutils 54b196a9bad88732debe0b49111af4755268f09f, which landed in the last release.

M  +11   -2    src/scripting/genericscriptedconfig.cpp

https://invent.kde.org/plasma/kwin/commit/468acd0cbed9036f1951e8ab1610880253aa3f3e